syntax = "proto3";

option csharp_namespace = "Mmorpg2d.Auth";

package mmorpg2d.auth;

service Auth {
  rpc Register (RegisterRequest) returns (RegisterReply);
  rpc Login    (LoginRequest)    returns (LoginReply);
}

message RegisterRequest {
  string email = 1;   // e-mail ÎèÑ OK
  string password = 2;
}

message RegisterReply {
  bool   success = 1;
  string detail  = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginReply {
  bool   success = 1;
  string detail  = 2;
  string jwt     = 3;
}